// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace Menu has groups with screens 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 24px;
  padding-right: 24px;
}

.c5 {
  color: #865CD6;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 1.1875rem;
  line-height: 24px;
  font-weight: 600;
  color: #333333;
}

.c5:hover {
  text-decoration: underline;
}

.c6 {
  display: inline-block;
  margin-right: 12px;
}

.c6 > * {
  vertical-align: bottom;
}

.c3 {
  font-size: 48px;
  line-height: 1.125;
  max-width: 1152px;
  font-weight: 300;
}

.c4 {
  padding: 10px 0 10px 10px;
  color: #F6F6F6;
}

.c4:hover {
  text-decoration: none;
  background-color: rgba(0,0,0,0.15);
}

.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

<div
  className="c0"
>
  <div
    aria-label={undefined}
    className="c1"
    direction="column"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
    >
      <h1
        className="c3"
      >
        Settings
        <span
          aria-hidden={true}
          className="fa fa-wrench icon"
        />
      </h1>
    </div>
    <a
      aria-label={undefined}
      className="c4 c5"
      disabled={undefined}
      href="/preferences"
      icon={
        <StyledAnchor__StyledIcon
          label="Preferences"
          reverse={undefined}
          theme={
            Object {
              "anchor": Object {
                "color": Array [
                  [Function],
                ],
                "fontWeight": 600,
                "textDecoration": "none",
              },
              "button": Object {
                "border": Object {
                  "color": Array [
                    [Function],
                  ],
                  "radius": "5px",
                  "width": "2px",
                },
                "colors": Object {
                  "accent": Array [
                    [Function],
                  ],
                  "critical": Array [
                    [Function],
                  ],
                  "secondary": Array [
                    [Function],
                  ],
                  "text": Array [
                    [Function],
                  ],
                },
                "maxWidth": "384px",
                "minWidth": "96px",
                "padding": Object {
                  "horizontal": "10px",
                  "vertical": "10px",
                },
              },
              "checkBox": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "4px",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                  "width": "4px",
                },
                "size": "24px",
                "toggle": Object {
                  "color": "#d9d9d9",
                  "radius": "24px",
                  "size": "48px",
                },
              },
              "clock": Object {
                "circle": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "width": "2px",
                },
                "hour": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "24px",
                  "width": "3px",
                },
                "minute": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "12px",
                  "width": "2px",
                },
                "second": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "9px",
                  "width": "1px",
                },
                "size": Object {
                  "huge": "288px",
                  "large": "144px",
                  "medium": "96px",
                  "small": "72px",
                  "xlarge": "216px",
                },
              },
              "global": Object {
                "animation": Object {
                  "duration": "1s",
                },
                "borderSize": Object {
                  "large": "12px",
                  "medium": "4px",
                  "small": "2px",
                  "xlarge": "24px",
                  "xsmall": "1px",
                },
                "breakpoints": Object {
                  "narrow": 699,
                },
                "centerColumnWidth": "1152px",
                "colors": Object {
                  "accent": Array [
                    "#00CCEB",
                    "#FF7D28",
                    "#915591",
                  ],
                  "active": "rgba(221,221,221,0.5)",
                  "background": "#FFFFFF",
                  "black": "#000000",
                  "border": "rgba(0, 0, 0, 0.15)",
                  "brand": "#865CD6",
                  "dark": Array [
                    "#333333",
                    "#444444",
                    "#555555",
                    "#666666",
                    "#777777",
                    "#999999",
                  ],
                  "darkBackground": Object {
                    "text": "rgba(255, 255, 255, 0.85)",
                  },
                  "light": Array [
                    "#F6F6F6",
                    "#EEEEEE",
                    "#DDDDDD",
                    "#CCCCCC",
                    "#BBBBBB",
                    "#AAAAAA",
                  ],
                  "neutral": Array [
                    "#0A64A0",
                    "#DC2878",
                    "#501EB4",
                    "#49516F",
                  ],
                  "placeholder": "#AAAAAA",
                  "status": Object {
                    "critical": "#FF324D",
                    "disabled": "#a8a8a8",
                    "error": "#FF324D",
                    "ok": "#8CC800",
                    "unknown": "#a8a8a8",
                    "warning": "#FFD602",
                  },
                  "text": "#333333",
                  "white": "#FFFFFF",
                },
                "control": Object {
                  "border": Object {
                    "width": "2px",
                  },
                  "font": Object {
                    "size": "19px",
                    "weight": 600,
                  },
                },
                "drop": Object {
                  "backgroundColor": "#f8f8f8",
                  "border": Object {
                    "radius": "0px",
                    "width": "0px",
                  },
                  "shadow": "0px 3px 8px rgba(100, 100, 100, 0.50)",
                },
                "edgeSize": Object {
                  "large": "48px",
                  "medium": "24px",
                  "small": "12px",
                  "xlarge": "96px",
                  "xsmall": "6px",
                },
                "focus": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "width": "2px",
                  },
                },
                "font": Object {
                  "face": "
        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 300;
          src:
            local('Work Sans Light'),
            local('WorkSans-Light'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 400;
          src:
            local('Work Sans'),
            local('WorkSans-Regular'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 500;
          src:
            local('Work Sans Medium'),
            local('WorkSans-Medium'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 600;
          src:
            local('Work Sans SemiBold'),
            local('WorkSans-SemiBold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 700;
          src:
            local('Work Sans Bold'),
            local('WorkSans-Bold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }
      ",
                  "family": "'Work Sans', Arial, sans-serif",
                  "size": "16px",
                },
                "hover": Object {
                  "backgroundColor": Array [
                    [Function],
                  ],
                  "textColor": "#000000",
                },
                "input": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "radius": "4px",
                    "width": "1px",
                  },
                },
                "lineHeight": "24px",
                "opacity": Object {
                  "medium": "0.4",
                  "strong": "0.1",
                  "weak": "0.8",
                },
                "size": Object {
                  "full": "100%",
                  "large": "768px",
                  "medium": "384px",
                  "small": "192px",
                  "xlarge": "1152px",
                  "xsmall": "96px",
                  "xxsmall": "48px",
                },
                "spacing": "24px",
              },
              "grommet": Object {},
              "heading": Object {
                "level": Object {
                  "1": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "2304px",
                      "size": "96px",
                    },
                    "medium": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                  },
                  "2": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "medium": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "3": Object {
                    "large": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "4": Object {
                    "large": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                    "small": Object {
                      "height": 1.375,
                      "maxWidth": "384px",
                      "size": "16px",
                    },
                  },
                },
                "weight": 300,
              },
              "icon": Object {
                "extend": Array [
                  [Function],
                  " ",
                  [Function],
                ],
              },
              "layer": Object {
                "backgroundColor": "#FFFFFF",
                "border": Object {
                  "radius": "4px",
                },
                "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
              },
              "paragraph": Object {
                "large": Object {
                  "height": 1.333,
                  "maxWidth": "576px",
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "maxWidth": "384px",
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "maxWidth": "336px",
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "maxWidth": "768px",
                  "size": "32px",
                },
              },
              "radioButton": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "100%",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                },
                "size": "24px",
              },
              "rangeInput": Object {
                "track": Object {
                  "color": Array [
                    [Function],
                  ],
                },
              },
              "text": Object {
                "large": Object {
                  "height": 1.167,
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "size": "32px",
                },
                "xsmall": Object {
                  "height": 1.5,
                  "size": "12px",
                },
                "xxlarge": Object {
                  "height": 1.125,
                  "size": "48px",
                },
              },
              "video": Object {
                "captions": Object {
                  "background": "rgba(0,0,0,0.7)",
                },
              },
            }
          }
        >
          <Icon
            name="heartbeat"
          />
        </StyledAnchor__StyledIcon>
      }
      label="Preferences"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="c6"
        label="Preferences"
      >
        <span
          aria-hidden={true}
          className="fa fa-heartbeat icon"
        />
      </span>
      Preferences
    </a>
    <a
      aria-label={undefined}
      className="c4 c5"
      disabled={undefined}
      href="/user-management"
      icon={
        <StyledAnchor__StyledIcon
          label="User Management"
          reverse={undefined}
          theme={
            Object {
              "anchor": Object {
                "color": Array [
                  [Function],
                ],
                "fontWeight": 600,
                "textDecoration": "none",
              },
              "button": Object {
                "border": Object {
                  "color": Array [
                    [Function],
                  ],
                  "radius": "5px",
                  "width": "2px",
                },
                "colors": Object {
                  "accent": Array [
                    [Function],
                  ],
                  "critical": Array [
                    [Function],
                  ],
                  "secondary": Array [
                    [Function],
                  ],
                  "text": Array [
                    [Function],
                  ],
                },
                "maxWidth": "384px",
                "minWidth": "96px",
                "padding": Object {
                  "horizontal": "10px",
                  "vertical": "10px",
                },
              },
              "checkBox": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "4px",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                  "width": "4px",
                },
                "size": "24px",
                "toggle": Object {
                  "color": "#d9d9d9",
                  "radius": "24px",
                  "size": "48px",
                },
              },
              "clock": Object {
                "circle": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "width": "2px",
                },
                "hour": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "24px",
                  "width": "3px",
                },
                "minute": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "12px",
                  "width": "2px",
                },
                "second": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "9px",
                  "width": "1px",
                },
                "size": Object {
                  "huge": "288px",
                  "large": "144px",
                  "medium": "96px",
                  "small": "72px",
                  "xlarge": "216px",
                },
              },
              "global": Object {
                "animation": Object {
                  "duration": "1s",
                },
                "borderSize": Object {
                  "large": "12px",
                  "medium": "4px",
                  "small": "2px",
                  "xlarge": "24px",
                  "xsmall": "1px",
                },
                "breakpoints": Object {
                  "narrow": 699,
                },
                "centerColumnWidth": "1152px",
                "colors": Object {
                  "accent": Array [
                    "#00CCEB",
                    "#FF7D28",
                    "#915591",
                  ],
                  "active": "rgba(221,221,221,0.5)",
                  "background": "#FFFFFF",
                  "black": "#000000",
                  "border": "rgba(0, 0, 0, 0.15)",
                  "brand": "#865CD6",
                  "dark": Array [
                    "#333333",
                    "#444444",
                    "#555555",
                    "#666666",
                    "#777777",
                    "#999999",
                  ],
                  "darkBackground": Object {
                    "text": "rgba(255, 255, 255, 0.85)",
                  },
                  "light": Array [
                    "#F6F6F6",
                    "#EEEEEE",
                    "#DDDDDD",
                    "#CCCCCC",
                    "#BBBBBB",
                    "#AAAAAA",
                  ],
                  "neutral": Array [
                    "#0A64A0",
                    "#DC2878",
                    "#501EB4",
                    "#49516F",
                  ],
                  "placeholder": "#AAAAAA",
                  "status": Object {
                    "critical": "#FF324D",
                    "disabled": "#a8a8a8",
                    "error": "#FF324D",
                    "ok": "#8CC800",
                    "unknown": "#a8a8a8",
                    "warning": "#FFD602",
                  },
                  "text": "#333333",
                  "white": "#FFFFFF",
                },
                "control": Object {
                  "border": Object {
                    "width": "2px",
                  },
                  "font": Object {
                    "size": "19px",
                    "weight": 600,
                  },
                },
                "drop": Object {
                  "backgroundColor": "#f8f8f8",
                  "border": Object {
                    "radius": "0px",
                    "width": "0px",
                  },
                  "shadow": "0px 3px 8px rgba(100, 100, 100, 0.50)",
                },
                "edgeSize": Object {
                  "large": "48px",
                  "medium": "24px",
                  "small": "12px",
                  "xlarge": "96px",
                  "xsmall": "6px",
                },
                "focus": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "width": "2px",
                  },
                },
                "font": Object {
                  "face": "
        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 300;
          src:
            local('Work Sans Light'),
            local('WorkSans-Light'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 400;
          src:
            local('Work Sans'),
            local('WorkSans-Regular'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 500;
          src:
            local('Work Sans Medium'),
            local('WorkSans-Medium'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 600;
          src:
            local('Work Sans SemiBold'),
            local('WorkSans-SemiBold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 700;
          src:
            local('Work Sans Bold'),
            local('WorkSans-Bold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }
      ",
                  "family": "'Work Sans', Arial, sans-serif",
                  "size": "16px",
                },
                "hover": Object {
                  "backgroundColor": Array [
                    [Function],
                  ],
                  "textColor": "#000000",
                },
                "input": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "radius": "4px",
                    "width": "1px",
                  },
                },
                "lineHeight": "24px",
                "opacity": Object {
                  "medium": "0.4",
                  "strong": "0.1",
                  "weak": "0.8",
                },
                "size": Object {
                  "full": "100%",
                  "large": "768px",
                  "medium": "384px",
                  "small": "192px",
                  "xlarge": "1152px",
                  "xsmall": "96px",
                  "xxsmall": "48px",
                },
                "spacing": "24px",
              },
              "grommet": Object {},
              "heading": Object {
                "level": Object {
                  "1": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "2304px",
                      "size": "96px",
                    },
                    "medium": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                  },
                  "2": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "medium": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "3": Object {
                    "large": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "4": Object {
                    "large": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                    "small": Object {
                      "height": 1.375,
                      "maxWidth": "384px",
                      "size": "16px",
                    },
                  },
                },
                "weight": 300,
              },
              "icon": Object {
                "extend": Array [
                  [Function],
                  " ",
                  [Function],
                ],
              },
              "layer": Object {
                "backgroundColor": "#FFFFFF",
                "border": Object {
                  "radius": "4px",
                },
                "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
              },
              "paragraph": Object {
                "large": Object {
                  "height": 1.333,
                  "maxWidth": "576px",
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "maxWidth": "384px",
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "maxWidth": "336px",
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "maxWidth": "768px",
                  "size": "32px",
                },
              },
              "radioButton": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "100%",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                },
                "size": "24px",
              },
              "rangeInput": Object {
                "track": Object {
                  "color": Array [
                    [Function],
                  ],
                },
              },
              "text": Object {
                "large": Object {
                  "height": 1.167,
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "size": "32px",
                },
                "xsmall": Object {
                  "height": 1.5,
                  "size": "12px",
                },
                "xxlarge": Object {
                  "height": 1.125,
                  "size": "48px",
                },
              },
              "video": Object {
                "captions": Object {
                  "background": "rgba(0,0,0,0.7)",
                },
              },
            }
          }
        >
          <Icon
            name="group"
          />
        </StyledAnchor__StyledIcon>
      }
      label="User Management"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="c6"
        label="User Management"
      >
        <span
          aria-hidden={true}
          className="fa fa-group icon"
        />
      </span>
      User Management
    </a>
    <a
      aria-label={undefined}
      className="c4 c5"
      disabled={undefined}
      href="/system-settings"
      icon={
        <StyledAnchor__StyledIcon
          label="System Settings"
          reverse={undefined}
          theme={
            Object {
              "anchor": Object {
                "color": Array [
                  [Function],
                ],
                "fontWeight": 600,
                "textDecoration": "none",
              },
              "button": Object {
                "border": Object {
                  "color": Array [
                    [Function],
                  ],
                  "radius": "5px",
                  "width": "2px",
                },
                "colors": Object {
                  "accent": Array [
                    [Function],
                  ],
                  "critical": Array [
                    [Function],
                  ],
                  "secondary": Array [
                    [Function],
                  ],
                  "text": Array [
                    [Function],
                  ],
                },
                "maxWidth": "384px",
                "minWidth": "96px",
                "padding": Object {
                  "horizontal": "10px",
                  "vertical": "10px",
                },
              },
              "checkBox": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "4px",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                  "width": "4px",
                },
                "size": "24px",
                "toggle": Object {
                  "color": "#d9d9d9",
                  "radius": "24px",
                  "size": "48px",
                },
              },
              "clock": Object {
                "circle": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "width": "2px",
                },
                "hour": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "24px",
                  "width": "3px",
                },
                "minute": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "12px",
                  "width": "2px",
                },
                "second": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "9px",
                  "width": "1px",
                },
                "size": Object {
                  "huge": "288px",
                  "large": "144px",
                  "medium": "96px",
                  "small": "72px",
                  "xlarge": "216px",
                },
              },
              "global": Object {
                "animation": Object {
                  "duration": "1s",
                },
                "borderSize": Object {
                  "large": "12px",
                  "medium": "4px",
                  "small": "2px",
                  "xlarge": "24px",
                  "xsmall": "1px",
                },
                "breakpoints": Object {
                  "narrow": 699,
                },
                "centerColumnWidth": "1152px",
                "colors": Object {
                  "accent": Array [
                    "#00CCEB",
                    "#FF7D28",
                    "#915591",
                  ],
                  "active": "rgba(221,221,221,0.5)",
                  "background": "#FFFFFF",
                  "black": "#000000",
                  "border": "rgba(0, 0, 0, 0.15)",
                  "brand": "#865CD6",
                  "dark": Array [
                    "#333333",
                    "#444444",
                    "#555555",
                    "#666666",
                    "#777777",
                    "#999999",
                  ],
                  "darkBackground": Object {
                    "text": "rgba(255, 255, 255, 0.85)",
                  },
                  "light": Array [
                    "#F6F6F6",
                    "#EEEEEE",
                    "#DDDDDD",
                    "#CCCCCC",
                    "#BBBBBB",
                    "#AAAAAA",
                  ],
                  "neutral": Array [
                    "#0A64A0",
                    "#DC2878",
                    "#501EB4",
                    "#49516F",
                  ],
                  "placeholder": "#AAAAAA",
                  "status": Object {
                    "critical": "#FF324D",
                    "disabled": "#a8a8a8",
                    "error": "#FF324D",
                    "ok": "#8CC800",
                    "unknown": "#a8a8a8",
                    "warning": "#FFD602",
                  },
                  "text": "#333333",
                  "white": "#FFFFFF",
                },
                "control": Object {
                  "border": Object {
                    "width": "2px",
                  },
                  "font": Object {
                    "size": "19px",
                    "weight": 600,
                  },
                },
                "drop": Object {
                  "backgroundColor": "#f8f8f8",
                  "border": Object {
                    "radius": "0px",
                    "width": "0px",
                  },
                  "shadow": "0px 3px 8px rgba(100, 100, 100, 0.50)",
                },
                "edgeSize": Object {
                  "large": "48px",
                  "medium": "24px",
                  "small": "12px",
                  "xlarge": "96px",
                  "xsmall": "6px",
                },
                "focus": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "width": "2px",
                  },
                },
                "font": Object {
                  "face": "
        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 300;
          src:
            local('Work Sans Light'),
            local('WorkSans-Light'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 400;
          src:
            local('Work Sans'),
            local('WorkSans-Regular'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 500;
          src:
            local('Work Sans Medium'),
            local('WorkSans-Medium'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 600;
          src:
            local('Work Sans SemiBold'),
            local('WorkSans-SemiBold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 700;
          src:
            local('Work Sans Bold'),
            local('WorkSans-Bold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }
      ",
                  "family": "'Work Sans', Arial, sans-serif",
                  "size": "16px",
                },
                "hover": Object {
                  "backgroundColor": Array [
                    [Function],
                  ],
                  "textColor": "#000000",
                },
                "input": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "radius": "4px",
                    "width": "1px",
                  },
                },
                "lineHeight": "24px",
                "opacity": Object {
                  "medium": "0.4",
                  "strong": "0.1",
                  "weak": "0.8",
                },
                "size": Object {
                  "full": "100%",
                  "large": "768px",
                  "medium": "384px",
                  "small": "192px",
                  "xlarge": "1152px",
                  "xsmall": "96px",
                  "xxsmall": "48px",
                },
                "spacing": "24px",
              },
              "grommet": Object {},
              "heading": Object {
                "level": Object {
                  "1": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "2304px",
                      "size": "96px",
                    },
                    "medium": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                  },
                  "2": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "medium": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "3": Object {
                    "large": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "4": Object {
                    "large": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                    "small": Object {
                      "height": 1.375,
                      "maxWidth": "384px",
                      "size": "16px",
                    },
                  },
                },
                "weight": 300,
              },
              "icon": Object {
                "extend": Array [
                  [Function],
                  " ",
                  [Function],
                ],
              },
              "layer": Object {
                "backgroundColor": "#FFFFFF",
                "border": Object {
                  "radius": "4px",
                },
                "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
              },
              "paragraph": Object {
                "large": Object {
                  "height": 1.333,
                  "maxWidth": "576px",
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "maxWidth": "384px",
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "maxWidth": "336px",
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "maxWidth": "768px",
                  "size": "32px",
                },
              },
              "radioButton": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "100%",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                },
                "size": "24px",
              },
              "rangeInput": Object {
                "track": Object {
                  "color": Array [
                    [Function],
                  ],
                },
              },
              "text": Object {
                "large": Object {
                  "height": 1.167,
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "size": "32px",
                },
                "xsmall": Object {
                  "height": 1.5,
                  "size": "12px",
                },
                "xxlarge": Object {
                  "height": 1.125,
                  "size": "48px",
                },
              },
              "video": Object {
                "captions": Object {
                  "background": "rgba(0,0,0,0.7)",
                },
              },
            }
          }
        >
          <Icon
            name="cogs"
          />
        </StyledAnchor__StyledIcon>
      }
      label="System Settings"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="c6"
        label="System Settings"
      >
        <span
          aria-hidden={true}
          className="fa fa-cogs icon"
        />
      </span>
      System Settings
    </a>
    <a
      aria-label={undefined}
      className="c4 c5"
      disabled={undefined}
      href="/new"
      icon={
        <StyledAnchor__StyledIcon
          label="title"
          reverse={undefined}
          theme={
            Object {
              "anchor": Object {
                "color": Array [
                  [Function],
                ],
                "fontWeight": 600,
                "textDecoration": "none",
              },
              "button": Object {
                "border": Object {
                  "color": Array [
                    [Function],
                  ],
                  "radius": "5px",
                  "width": "2px",
                },
                "colors": Object {
                  "accent": Array [
                    [Function],
                  ],
                  "critical": Array [
                    [Function],
                  ],
                  "secondary": Array [
                    [Function],
                  ],
                  "text": Array [
                    [Function],
                  ],
                },
                "maxWidth": "384px",
                "minWidth": "96px",
                "padding": Object {
                  "horizontal": "10px",
                  "vertical": "10px",
                },
              },
              "checkBox": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "4px",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                  "width": "4px",
                },
                "size": "24px",
                "toggle": Object {
                  "color": "#d9d9d9",
                  "radius": "24px",
                  "size": "48px",
                },
              },
              "clock": Object {
                "circle": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "width": "2px",
                },
                "hour": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "24px",
                  "width": "3px",
                },
                "minute": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "12px",
                  "width": "2px",
                },
                "second": Object {
                  "color": Object {
                    "day": Array [
                      [Function],
                    ],
                    "night": Array [
                      [Function],
                    ],
                  },
                  "shape": "round",
                  "size": "9px",
                  "width": "1px",
                },
                "size": Object {
                  "huge": "288px",
                  "large": "144px",
                  "medium": "96px",
                  "small": "72px",
                  "xlarge": "216px",
                },
              },
              "global": Object {
                "animation": Object {
                  "duration": "1s",
                },
                "borderSize": Object {
                  "large": "12px",
                  "medium": "4px",
                  "small": "2px",
                  "xlarge": "24px",
                  "xsmall": "1px",
                },
                "breakpoints": Object {
                  "narrow": 699,
                },
                "centerColumnWidth": "1152px",
                "colors": Object {
                  "accent": Array [
                    "#00CCEB",
                    "#FF7D28",
                    "#915591",
                  ],
                  "active": "rgba(221,221,221,0.5)",
                  "background": "#FFFFFF",
                  "black": "#000000",
                  "border": "rgba(0, 0, 0, 0.15)",
                  "brand": "#865CD6",
                  "dark": Array [
                    "#333333",
                    "#444444",
                    "#555555",
                    "#666666",
                    "#777777",
                    "#999999",
                  ],
                  "darkBackground": Object {
                    "text": "rgba(255, 255, 255, 0.85)",
                  },
                  "light": Array [
                    "#F6F6F6",
                    "#EEEEEE",
                    "#DDDDDD",
                    "#CCCCCC",
                    "#BBBBBB",
                    "#AAAAAA",
                  ],
                  "neutral": Array [
                    "#0A64A0",
                    "#DC2878",
                    "#501EB4",
                    "#49516F",
                  ],
                  "placeholder": "#AAAAAA",
                  "status": Object {
                    "critical": "#FF324D",
                    "disabled": "#a8a8a8",
                    "error": "#FF324D",
                    "ok": "#8CC800",
                    "unknown": "#a8a8a8",
                    "warning": "#FFD602",
                  },
                  "text": "#333333",
                  "white": "#FFFFFF",
                },
                "control": Object {
                  "border": Object {
                    "width": "2px",
                  },
                  "font": Object {
                    "size": "19px",
                    "weight": 600,
                  },
                },
                "drop": Object {
                  "backgroundColor": "#f8f8f8",
                  "border": Object {
                    "radius": "0px",
                    "width": "0px",
                  },
                  "shadow": "0px 3px 8px rgba(100, 100, 100, 0.50)",
                },
                "edgeSize": Object {
                  "large": "48px",
                  "medium": "24px",
                  "small": "12px",
                  "xlarge": "96px",
                  "xsmall": "6px",
                },
                "focus": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "width": "2px",
                  },
                },
                "font": Object {
                  "face": "
        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 300;
          src:
            local('Work Sans Light'),
            local('WorkSans-Light'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 400;
          src:
            local('Work Sans'),
            local('WorkSans-Regular'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 500;
          src:
            local('Work Sans Medium'),
            local('WorkSans-Medium'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 600;
          src:
            local('Work Sans SemiBold'),
            local('WorkSans-SemiBold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 700;
          src:
            local('Work Sans Bold'),
            local('WorkSans-Bold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }
      ",
                  "family": "'Work Sans', Arial, sans-serif",
                  "size": "16px",
                },
                "hover": Object {
                  "backgroundColor": Array [
                    [Function],
                  ],
                  "textColor": "#000000",
                },
                "input": Object {
                  "border": Object {
                    "color": Array [
                      [Function],
                    ],
                    "radius": "4px",
                    "width": "1px",
                  },
                },
                "lineHeight": "24px",
                "opacity": Object {
                  "medium": "0.4",
                  "strong": "0.1",
                  "weak": "0.8",
                },
                "size": Object {
                  "full": "100%",
                  "large": "768px",
                  "medium": "384px",
                  "small": "192px",
                  "xlarge": "1152px",
                  "xsmall": "96px",
                  "xxsmall": "48px",
                },
                "spacing": "24px",
              },
              "grommet": Object {},
              "heading": Object {
                "level": Object {
                  "1": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "2304px",
                      "size": "96px",
                    },
                    "medium": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                  },
                  "2": Object {
                    "large": Object {
                      "height": 1.125,
                      "maxWidth": "1152px",
                      "size": "48px",
                    },
                    "medium": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "3": Object {
                    "large": Object {
                      "height": 1.23,
                      "maxWidth": "864px",
                      "size": "36px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "small": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                  },
                  "4": Object {
                    "large": Object {
                      "height": 1.333,
                      "maxWidth": "576px",
                      "size": "24px",
                    },
                    "medium": Object {
                      "height": 1.333,
                      "maxWidth": "432px",
                      "size": "18px",
                    },
                    "small": Object {
                      "height": 1.375,
                      "maxWidth": "384px",
                      "size": "16px",
                    },
                  },
                },
                "weight": 300,
              },
              "icon": Object {
                "extend": Array [
                  [Function],
                  " ",
                  [Function],
                ],
              },
              "layer": Object {
                "backgroundColor": "#FFFFFF",
                "border": Object {
                  "radius": "4px",
                },
                "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
              },
              "paragraph": Object {
                "large": Object {
                  "height": 1.333,
                  "maxWidth": "576px",
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "maxWidth": "384px",
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "maxWidth": "336px",
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "maxWidth": "768px",
                  "size": "32px",
                },
              },
              "radioButton": Object {
                "border": Object {
                  "color": Object {
                    "dark": "rgba(255, 255, 255, 0.5)",
                    "light": "rgba(0, 0, 0, 0.15)",
                  },
                  "radius": "100%",
                  "width": "2px",
                },
                "check": Object {
                  "color": Array [
                    [Function],
                  ],
                },
                "size": "24px",
              },
              "rangeInput": Object {
                "track": Object {
                  "color": Array [
                    [Function],
                  ],
                },
              },
              "text": Object {
                "large": Object {
                  "height": 1.167,
                  "size": "24px",
                },
                "medium": Object {
                  "height": 1.375,
                  "size": "16px",
                },
                "small": Object {
                  "height": 1.43,
                  "size": "14px",
                },
                "xlarge": Object {
                  "height": 1.1875,
                  "size": "32px",
                },
                "xsmall": Object {
                  "height": 1.5,
                  "size": "12px",
                },
                "xxlarge": Object {
                  "height": 1.125,
                  "size": "48px",
                },
              },
              "video": Object {
                "captions": Object {
                  "background": "rgba(0,0,0,0.7)",
                },
              },
            }
          }
        >
          <Icon
            name="red"
          />
        </StyledAnchor__StyledIcon>
      }
      label="title"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="c6"
        label="title"
      >
        <span
          aria-hidden={true}
          className="fa fa-red icon"
        />
      </span>
      title
    </a>
  </div>
</div>
`;

exports[`Workspace Menu has renders menu options 1`] = `
.c2 {
  color: #865CD6;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 1.1875rem;
  line-height: 24px;
  font-weight: 600;
  color: #333333;
}

.c2:hover {
  text-decoration: underline;
}

.c3 {
  display: inline-block;
  margin-right: 12px;
}

.c3 > * {
  vertical-align: bottom;
}

.c1 {
  padding: 10px 0 10px 10px;
  color: #F6F6F6;
}

.c1:hover {
  text-decoration: none;
  background-color: rgba(0,0,0,0.15);
}

.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

<div
  className="c0"
>
  <a
    aria-label={undefined}
    className="c1 c2"
    disabled={undefined}
    href="/test"
    icon={
      <StyledAnchor__StyledIcon
        label="title"
        reverse={undefined}
        theme={
          Object {
            "anchor": Object {
              "color": Array [
                [Function],
              ],
              "fontWeight": 600,
              "textDecoration": "none",
            },
            "button": Object {
              "border": Object {
                "color": Array [
                  [Function],
                ],
                "radius": "5px",
                "width": "2px",
              },
              "colors": Object {
                "accent": Array [
                  [Function],
                ],
                "critical": Array [
                  [Function],
                ],
                "secondary": Array [
                  [Function],
                ],
                "text": Array [
                  [Function],
                ],
              },
              "maxWidth": "384px",
              "minWidth": "96px",
              "padding": Object {
                "horizontal": "10px",
                "vertical": "10px",
              },
            },
            "checkBox": Object {
              "border": Object {
                "color": Object {
                  "dark": "rgba(255, 255, 255, 0.5)",
                  "light": "rgba(0, 0, 0, 0.15)",
                },
                "radius": "4px",
                "width": "2px",
              },
              "check": Object {
                "color": Array [
                  [Function],
                ],
                "width": "4px",
              },
              "size": "24px",
              "toggle": Object {
                "color": "#d9d9d9",
                "radius": "24px",
                "size": "48px",
              },
            },
            "clock": Object {
              "circle": Object {
                "color": Object {
                  "day": Array [
                    [Function],
                  ],
                  "night": Array [
                    [Function],
                  ],
                },
                "width": "2px",
              },
              "hour": Object {
                "color": Object {
                  "day": Array [
                    [Function],
                  ],
                  "night": Array [
                    [Function],
                  ],
                },
                "shape": "round",
                "size": "24px",
                "width": "3px",
              },
              "minute": Object {
                "color": Object {
                  "day": Array [
                    [Function],
                  ],
                  "night": Array [
                    [Function],
                  ],
                },
                "shape": "round",
                "size": "12px",
                "width": "2px",
              },
              "second": Object {
                "color": Object {
                  "day": Array [
                    [Function],
                  ],
                  "night": Array [
                    [Function],
                  ],
                },
                "shape": "round",
                "size": "9px",
                "width": "1px",
              },
              "size": Object {
                "huge": "288px",
                "large": "144px",
                "medium": "96px",
                "small": "72px",
                "xlarge": "216px",
              },
            },
            "global": Object {
              "animation": Object {
                "duration": "1s",
              },
              "borderSize": Object {
                "large": "12px",
                "medium": "4px",
                "small": "2px",
                "xlarge": "24px",
                "xsmall": "1px",
              },
              "breakpoints": Object {
                "narrow": 699,
              },
              "centerColumnWidth": "1152px",
              "colors": Object {
                "accent": Array [
                  "#00CCEB",
                  "#FF7D28",
                  "#915591",
                ],
                "active": "rgba(221,221,221,0.5)",
                "background": "#FFFFFF",
                "black": "#000000",
                "border": "rgba(0, 0, 0, 0.15)",
                "brand": "#865CD6",
                "dark": Array [
                  "#333333",
                  "#444444",
                  "#555555",
                  "#666666",
                  "#777777",
                  "#999999",
                ],
                "darkBackground": Object {
                  "text": "rgba(255, 255, 255, 0.85)",
                },
                "light": Array [
                  "#F6F6F6",
                  "#EEEEEE",
                  "#DDDDDD",
                  "#CCCCCC",
                  "#BBBBBB",
                  "#AAAAAA",
                ],
                "neutral": Array [
                  "#0A64A0",
                  "#DC2878",
                  "#501EB4",
                  "#49516F",
                ],
                "placeholder": "#AAAAAA",
                "status": Object {
                  "critical": "#FF324D",
                  "disabled": "#a8a8a8",
                  "error": "#FF324D",
                  "ok": "#8CC800",
                  "unknown": "#a8a8a8",
                  "warning": "#FFD602",
                },
                "text": "#333333",
                "white": "#FFFFFF",
              },
              "control": Object {
                "border": Object {
                  "width": "2px",
                },
                "font": Object {
                  "size": "19px",
                  "weight": 600,
                },
              },
              "drop": Object {
                "backgroundColor": "#f8f8f8",
                "border": Object {
                  "radius": "0px",
                  "width": "0px",
                },
                "shadow": "0px 3px 8px rgba(100, 100, 100, 0.50)",
              },
              "edgeSize": Object {
                "large": "48px",
                "medium": "24px",
                "small": "12px",
                "xlarge": "96px",
                "xsmall": "6px",
              },
              "focus": Object {
                "border": Object {
                  "color": Array [
                    [Function],
                  ],
                  "width": "2px",
                },
              },
              "font": Object {
                "face": "
        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 300;
          src:
            local('Work Sans Light'),
            local('WorkSans-Light'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/FD_Udbezj8EHXbdsqLUplxampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 400;
          src:
            local('Work Sans'),
            local('WorkSans-Regular'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/ElUAY9q6T0Ayx4zWzW63VJBw1xU1rKptJj_0jans920.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 500;
          src:
            local('Work Sans Medium'),
            local('WorkSans-Medium'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/Nbre-U_bp6Xktt8cpgwaJBampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 600;
          src:
            local('Work Sans SemiBold'),
            local('WorkSans-SemiBold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/z9rX03Xuz9ZNHTMg1_ghGRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }

        @font-face {
          font-family: 'Work Sans';
          font-style: normal;
          font-weight: 700;
          src:
            local('Work Sans Bold'),
            local('WorkSans-Bold'),
            url(\\"https://fonts.gstatic.com/s/worksans/v2/4udXuXg54JlPEP5iKO5AmRampu5_7CjHW5spxoeN3Vs.woff2\\") format('woff2');
        }
      ",
                "family": "'Work Sans', Arial, sans-serif",
                "size": "16px",
              },
              "hover": Object {
                "backgroundColor": Array [
                  [Function],
                ],
                "textColor": "#000000",
              },
              "input": Object {
                "border": Object {
                  "color": Array [
                    [Function],
                  ],
                  "radius": "4px",
                  "width": "1px",
                },
              },
              "lineHeight": "24px",
              "opacity": Object {
                "medium": "0.4",
                "strong": "0.1",
                "weak": "0.8",
              },
              "size": Object {
                "full": "100%",
                "large": "768px",
                "medium": "384px",
                "small": "192px",
                "xlarge": "1152px",
                "xsmall": "96px",
                "xxsmall": "48px",
              },
              "spacing": "24px",
            },
            "grommet": Object {},
            "heading": Object {
              "level": Object {
                "1": Object {
                  "large": Object {
                    "height": 1.125,
                    "maxWidth": "2304px",
                    "size": "96px",
                  },
                  "medium": Object {
                    "height": 1.125,
                    "maxWidth": "1152px",
                    "size": "48px",
                  },
                  "small": Object {
                    "height": 1.333,
                    "maxWidth": "576px",
                    "size": "24px",
                  },
                },
                "2": Object {
                  "large": Object {
                    "height": 1.125,
                    "maxWidth": "1152px",
                    "size": "48px",
                  },
                  "medium": Object {
                    "height": 1.23,
                    "maxWidth": "864px",
                    "size": "36px",
                  },
                  "small": Object {
                    "height": 1.333,
                    "maxWidth": "432px",
                    "size": "18px",
                  },
                },
                "3": Object {
                  "large": Object {
                    "height": 1.23,
                    "maxWidth": "864px",
                    "size": "36px",
                  },
                  "medium": Object {
                    "height": 1.333,
                    "maxWidth": "576px",
                    "size": "24px",
                  },
                  "small": Object {
                    "height": 1.333,
                    "maxWidth": "432px",
                    "size": "18px",
                  },
                },
                "4": Object {
                  "large": Object {
                    "height": 1.333,
                    "maxWidth": "576px",
                    "size": "24px",
                  },
                  "medium": Object {
                    "height": 1.333,
                    "maxWidth": "432px",
                    "size": "18px",
                  },
                  "small": Object {
                    "height": 1.375,
                    "maxWidth": "384px",
                    "size": "16px",
                  },
                },
              },
              "weight": 300,
            },
            "icon": Object {
              "extend": Array [
                [Function],
                " ",
                [Function],
              ],
            },
            "layer": Object {
              "backgroundColor": "#FFFFFF",
              "border": Object {
                "radius": "4px",
              },
              "overlayBackgroundColor": "rgba(0, 0, 0, 0.5)",
            },
            "paragraph": Object {
              "large": Object {
                "height": 1.333,
                "maxWidth": "576px",
                "size": "24px",
              },
              "medium": Object {
                "height": 1.375,
                "maxWidth": "384px",
                "size": "16px",
              },
              "small": Object {
                "height": 1.43,
                "maxWidth": "336px",
                "size": "14px",
              },
              "xlarge": Object {
                "height": 1.1875,
                "maxWidth": "768px",
                "size": "32px",
              },
            },
            "radioButton": Object {
              "border": Object {
                "color": Object {
                  "dark": "rgba(255, 255, 255, 0.5)",
                  "light": "rgba(0, 0, 0, 0.15)",
                },
                "radius": "100%",
                "width": "2px",
              },
              "check": Object {
                "color": Array [
                  [Function],
                ],
              },
              "size": "24px",
            },
            "rangeInput": Object {
              "track": Object {
                "color": Array [
                  [Function],
                ],
              },
            },
            "text": Object {
              "large": Object {
                "height": 1.167,
                "size": "24px",
              },
              "medium": Object {
                "height": 1.375,
                "size": "16px",
              },
              "small": Object {
                "height": 1.43,
                "size": "14px",
              },
              "xlarge": Object {
                "height": 1.1875,
                "size": "32px",
              },
              "xsmall": Object {
                "height": 1.5,
                "size": "12px",
              },
              "xxlarge": Object {
                "height": 1.125,
                "size": "48px",
              },
            },
            "video": Object {
              "captions": Object {
                "background": "rgba(0,0,0,0.7)",
              },
            },
          }
        }
      >
        <Icon
          name="red"
        />
      </StyledAnchor__StyledIcon>
    }
    label="title"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c3"
      label="title"
    >
      <span
        aria-hidden={true}
        className="fa fa-red icon"
      />
    </span>
    title
  </a>
</div>
`;
